hphp/test/zend/bad/tests/security/open_basedir_file_exists.php
<?php
require_once "open_basedir.inc";
test_open_basedir("file_exists");
?>
<?php error_reporting(0); ?>
<?php
require_once "open_basedir.inc";
delete_directories();
?>